[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flower_tryout"
version = "1.0.0"
description = "Flower Tryout FLSEHM"
license = "Apache-2.0"
authors = [
    { name = "Dorian Verna", email = "dorianverna7@gmail.com" },
]
dependencies = [
    "flwr[simulation]>=1.13.0",
    "flwr-datasets[vision]>=0.3.0",
    "numpy>=1.26.0"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "server:app"
clientapp = "client:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-sample = 1.0

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 4